added status on statement

--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -462,6 +462,9 @@
         <ng-template colRef="id" label="Id" let-id sort>
           {{ id }}
         </ng-template>
+        <ng-template colRef="status" label="Status" let-status sort>
+          {{ status }}
+        </ng-template>
         <ng-template colRef="" label="Contract Id" let-item sort>
           {{ getCurrentContract(item) }}
         </ng-template>
