--- a/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
@@ -22,8 +22,10 @@
   <section>
     <ul>
       <li><strong>Rightholder :</strong> {{ getRightholderName(statement.rightholderId) }}</li>
-      <li><strong>From :</strong> {{  statement.duration.from | date: 'MM/dd/yyyy' }}</li>
-      <li><strong>To :</strong> {{  statement.duration.to | date: 'MM/dd/yyyy' }}</li>
+      <li><strong>From :</strong> {{ statement.duration.from | date: 'MM/dd/yyyy' }}</li>
+      <li><strong>To :</strong> {{ statement.duration.to | date: 'MM/dd/yyyy' }}</li>
+      <li><strong>Contract :</strong> {{ statement.contractId }}</li>
+      <li><strong>Status: </strong> {{ statement.status }}</li>
       <li><strong>Turnover :</strong> <price-per-currency [price]="getRightholderActual('turnover')"></price-per-currency></li>
       <li><strong>Revenue :</strong> <price-per-currency [price]="getRightholderActual('revenu')"></price-per-currency></li>
     </ul>
