--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -14,11 +14,8 @@
   <a mat-button routerLink="documents" routerLinkActive="mat-primary">
     <mat-icon svgIcon="document_signed"></mat-icon><span matLine>Documents</span>
   </a>
-  <a mat-button routerLink="incomes" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="monetization"></mat-icon><span matLine>Incomes</span>
-  </a>
-  <a mat-button routerLink="expenses" routerLinkActive="mat-primary">
-    <mat-icon svgIcon="monetization"></mat-icon><span matLine>Expenses</span>
+  <a mat-button routerLink="statements" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="monetization"></mat-icon><span matLine>Statements</span>
   </a>
   <a mat-button routerLink="sources" routerLinkActive="mat-primary">
     <mat-icon svgIcon="world"></mat-icon><span matLine>Sources</span>
