--- a/libs/import/src/lib/table-extracted-elements/statements/statements.component.html
+++ b/libs/import/src/lib/table-extracted-elements/statements/statements.component.html
@@ -41,29 +41,19 @@
     <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
   </ng-container>
 
-  <ng-container matColumnDef="expense.id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Expense Id </th>
-    <td mat-cell *matCellDef="let element"> {{ element.expense.id ? element.expense.id : '--' }} </td>
+  <ng-container matColumnDef="statement.id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Statement Id </th>
+    <td mat-cell *matCellDef="let element"> {{ element.statement.id ? element.statement.id : '--' }} </td>
   </ng-container>
 
-  <ng-container matColumnDef="expense.titleId">
+  <ng-container matColumnDef="statement.waterfallId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Waterfall Id </th>
-    <td mat-cell *matCellDef="let element"> {{ element.expense.titleId ? element.expense.titleId : '--' }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.statement.waterfallId ? element.statement.waterfallId : '--' }} </td>
   </ng-container>
 
-  <ng-container matColumnDef="expense.contractId">
+  <ng-container matColumnDef="statement.contractId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Contract Id </th>
-    <td mat-cell *matCellDef="let element"> {{ element.expense.contractId ? element.expense.contractId : '--' }} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="expense.price">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-    <td mat-cell *matCellDef="let element"> {{ element.expense.price ? element.expense.price : '--' }} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="expense.currency">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Currency </th>
-    <td mat-cell *matCellDef="let element"> {{ element.expense.currency ? element.expense.currency : '--' }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.statement.contractId ? element.statement.contractId : '--' }} </td>
   </ng-container>
 
   <ng-container matColumnDef="errors">
