--- a/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
+++ b/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
@@ -36,6 +36,8 @@
     <mat-icon svgIcon="build"></mat-icon><span matLine>Tools</span>
   </button>
 
+  <button mat-button (click)="updateAirtable()">Airtable update</button>
+
   <span fxFlex="auto"></span>
 
   <auth-widget></auth-widget>
