--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -407,7 +407,7 @@
           <a mat-icon-button target="_blank" [routerLink]="['/c/o/dashboard/crm/waterfall', waterfall.id, 'statement', statement.id]" (click)="$event.stopPropagation()">
             <mat-icon svgIcon="launch" matTooltip="Go to statement"></mat-icon>
           </a>
-          <button mat-icon-button (click)="removeStatements([statement])">
+          <button mat-icon-button (click)="removeStatements([statement]);$event.stopPropagation()">
             <mat-icon svgIcon="delete" matTooltip="Delete statement"></mat-icon>
           </button>
         </ng-template>
